--- a/README
+++ b/README
@@ -1,6 +1,3 @@
-# $File: //member/autrijus/Geography-Country-Utils/README $ $Author: autrijus $
-# $Revision: #1 $ $Change: 4087 $ $DateTime: 2003/02/05 04:03:47 $
-
 This is the README file for Geography::Country::Utils, a collection of
 modules dealing with country-specific information handling.
 
@@ -8,11 +5,11 @@ modules dealing with country-specific information handling.
 
 Geography::Country::Utils uses the standard perl module install process:
 
-cpansign -v		# see SIGNATURE for details
-perl Makefile.PL
-make
-make test
-make install
+    cpansign -v		# optional; see SIGNATURE for details
+    perl Makefile.PL
+    make                # or 'nmake' on Win32
+    make test
+    make install
 
 * Sample usage
 
@@ -29,7 +26,7 @@ make install
 
 Copyright 2001, 2002 by Ariel Brosh.
 
-Copyright 2003 by Autrijus Tang <autrijus@autrijus.org>.
+Copyright 2003, 2005 by Autrijus Tang <autrijus@autrijus.org>.
 
 All rights reserved.  You can redistribute and/or modify
 this bundle under the same terms as Perl itself.
